fixed profile pictures not showing on user profile listings

--- a/src/components/ui/EditItemModal/EditItemModal.css
+++ b/src/components/ui/EditItemModal/EditItemModal.css
@@ -524,7 +524,7 @@
   left: 0;
   background-color: #555;
   width: 100%;
-  border-top: grey 1px solid;
+  border-top: #555 1px solid;
   padding: 10px;
 }
 
