--- a/src/components/ui/EditUserProfileModal/EditUserProfileModal.css
+++ b/src/components/ui/EditUserProfileModal/EditUserProfileModal.css
@@ -11,7 +11,7 @@
 .edit-user-profile-modal .header {
   display: flex;
   justify-content: space-between;
-  border-bottom: grey 1px solid;
+  border-bottom: #555 1px solid;
   padding-bottom: 15px;
   padding: 15px;
 }
